--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
  \_______/|__/  \__/   \___/  |__/|__/|__/|__/  |__/|__/  \__/
                                                               
                                                               
-                     <a href="https://axti.ink/" target="_blank" style="text-decoration: none;">murdalot#0001</a> | <a href="https://discord.gg/AqthjaEeZc" target="_blank" style="text-decoration:none;">Discord</a></pre>
+                     <a href="https://axti.ink/" target="_blank" style="text-decoration: none;">luzifer#0001</a> | <a href="https://discord.gg/A87728VdE7" target="_blank" style="text-decoration:none;">Discord</a></pre>
 </div>
 	</div>		    		
 		<video autoplay loop id="vid">
