--- a/index.html
+++ b/index.html
@@ -36,14 +36,12 @@
 		
 		<div id="main">
 			<div class="center">
-			    <pre>                       /$$     /$$     /$$           /$$      
-                      | $$    |__/    |__/          | $$      
-  /$$$$$$  /$$   /$$ /$$$$$$   /$$     /$$ /$$$$$$$ | $$   /$$
- |____  $$|  $$ /$$/|_  $$_/  | $$    | $$| $$__  $$| $$  /$$/
-  /$$$$$$$ \  $$$$/   | $$    | $$    | $$| $$  \ $$| $$$$$$/ 
- /$$__  $$  >$$  $$   | $$ /$$| $$    | $$| $$  | $$| $$_  $$ 
-|  $$$$$$$ /$$/\  $$  |  $$$$/| $$ /$$| $$| $$  | $$| $$ \  $$
- \_______/|__/  \__/   \___/  |__/|__/|__/|__/  |__/|__/  \__/
+			    <pre>                       ░░██╗███████╗██╗░░██╗██╗░░██╗███╗░░░███╗░█████╗░██████╗░
+██║░░██║██╔════╝╚██╗██╔╝╚██╗██╔╝████╗░████║██╔══██╗██╔══██╗
+███████║█████╗░░░╚███╔╝░░╚███╔╝░██╔████╔██║██║░░██║██████╦╝
+██╔══██║██╔══╝░░░██╔██╗░░██╔██╗░██║╚██╔╝██║██║░░██║██╔══██╗
+██║░░██║███████╗██╔╝╚██╗██╔╝╚██╗██║░╚═╝░██║╚█████╔╝██████╦╝
+╚═╝░░╚═╝╚══════╝╚═╝░░╚═╝╚═╝░░╚═╝╚═╝░░░░░╚═╝░╚════╝░╚═════╝░
                                                               
                                                               
                      <a href="https://axti.ink/" target="_blank" style="text-decoration: none;">luzifer#0001</a> | <a href="https://discord.gg/A87728VdE7" target="_blank" style="text-decoration:none;">Discord</a></pre>
