--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>axti.ink</title>
+    <title>hexxmob</title>
     <meta charset="UTF-8">
     <meta property="og:type" content="site">
     <meta property="og:url" content="index.html">
