--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 		
 		<div id="main">
 			<div class="center">
-			    <pre>                       ░░██╗███████╗██╗░░██╗██╗░░██╗███╗░░░███╗░█████╗░██████╗░
+			    <pre>             
+░░██╗███████╗██╗░░██╗██╗░░██╗███╗░░░███╗░█████╗░██████╗░
 ██║░░██║██╔════╝╚██╗██╔╝╚██╗██╔╝████╗░████║██╔══██╗██╔══██╗
 ███████║█████╗░░░╚███╔╝░░╚███╔╝░██╔████╔██║██║░░██║██████╦╝
 ██╔══██║██╔══╝░░░██╔██╗░░██╔██╗░██║╚██╔╝██║██║░░██║██╔══██╗
