--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 ╚═╝░░╚═╝╚══════╝╚═╝░░╚═╝╚═╝░░╚═╝╚═╝░░░░░╚═╝░╚════╝░╚═════╝░
                                                               
                                                               
-                     <a href="https://axti.ink/" target="_blank" style="text-decoration: none;">luzifer#0001</a> | <a href="https://discord.gg/A87728VdE7" target="_blank" style="text-decoration:none;">Discord</a></pre>
+                     <a href="https://axti.ink/" target="_blank" style="text-decoration: none;">scorch#1000</a> | <a href="https://discord.gg/A87728VdE7" target="_blank" style="text-decoration:none;">Discord</a></pre>
 </div>
 	</div>		    		
 		<video autoplay loop id="vid">
