--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   gtag('config', 'G-60SEHFDBP1');
 </script>
     
-    <embed src="assets/media/1.mp3" type="audio/mp3" autostart="true" hidden="true" style="display: none;">
-		<iframe src="assets/media/1.mp3" type="audio/mp3" allow="autoplay" style="display:none"></iframe>
+    <embed src="assets/media/1.mp3" type="mp3/audio" autostart="true" hidden="true" style="display: none;">
+		<iframe src="assets/media/1.mp3" type="mp3/audio" allow="autoplay" style="display:none"></iframe>
 		<div id="clickToPlay">
-			<span class="center">click to continue</span>
+			<span class="center">PressToContinue</span>
 		</div>
 		<div id="border">
 			<div id="borderTop" style="top: 0; left: 0;"></div>
