--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     
     <embed src="assets/media/sigilkore.mp3" type="mp3/audio" autostart="true" hidden="true" style="display: none;">
 		<iframe src="assets/media/1.mp3" type="mp3/audio" allow="autoplay" style="display:none"></iframe>
-		<div id="PressToContinue">
-			<span class="center">Press To Continue</span>
+		<div id="clickToContinue">
+			<span class="center">ClickToContinue</span>
 		</div>
 		<div id="border">
 			<div id="borderTop" style="top: 0; left: 0;"></div>
