--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   gtag('config', 'G-60SEHFDBP1');
 </script>
     
-    <embed src="assets/media/1.mp3" type="mp3/audio" autostart="true" hidden="true" style="display: none;">
-		<iframe src="assets/media/1.mp3" type="mp3/audio" allow="autoplay" style="display:none"></iframe>
+    <embed src="assets/media/1.mp3" type="audio/mp3" autostart="true" hidden="true" style="display: none;">
+		<iframe src="assets/media/1.mp3" type="audio/mp3" allow="autoplay" style="display:none"></iframe>
 		<div id="clickToContinue">
 			<span class="center">ClickToContinue</span>
 		</div>
