--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   gtag('config', 'G-60SEHFDBP1');
 </script>
     
-    <embed src="assets/media/1.mp3" type="audio/mp3" autostart="true" hidden="true" style="display: none;">
+    <embed src="assets/media/sigilkore.mp3" type="audio/mp3" autostart="true" hidden="true" style="display: none;">
 		<iframe src="assets/media/1.mp3" type="audio/mp3" allow="autoplay" style="display:none"></iframe>
 		<div id="clickToContinue">
-			<span class="center">ClickToContinue</span>
+			<span class="center">click</span>
 		</div>
 		<div id="border">
 			<div id="borderTop" style="top: 0; left: 0;"></div>
