--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <embed src="assets/media/sigilkore.mp3" type="audio/mp3" autostart="true" hidden="true" style="display: none;">
 		<iframe src="assets/media/1.mp3" type="audio/mp3" allow="autoplay" style="display:none"></iframe>
 		<div id="clickToContinue">
-			<span class="center">click</span>
+			<span class="center">clickToContinue</span>
 		</div>
 		<div id="border">
 			<div id="borderTop" style="top: 0; left: 0;"></div>
