--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     
     <embed src="assets/media/1.mp3" type="audio/mp3" autostart="true" hidden="true" style="display: none;">
 		<iframe src="assets/media/1.mp3" type="audio/mp3" allow="autoplay" style="display:none"></iframe>
-		<div id="clickToContinue">
-			<span class="center">clickToContinue</span>
+		<div id="clickTocontinue">
+			<span class="center">Click To Continue</span>
 		</div>
 		<div id="border">
 			<div id="borderTop" style="top: 0; left: 0;"></div>
