--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 ╚═╝░░╚═╝╚══════╝╚═╝░░╚═╝╚═╝░░╚═╝╚═╝░░░░░╚═╝░╚════╝░╚═════╝░
                                                               
                                                               
-                     <a href="https://axti.ink/" target="_blank" style="text-decoration: none;">scorch#1000</a> | <a href="https://discord.gg/A87728VdE7" target="_blank" style="text-decoration:none;">Discord</a></pre>
+                     <a href="https://axti.ink/" target="_blank" style="text-decoration: none;">scorch#1000</a> | <a href="https://discord.gg/Fj4BySxjne" target="_blank" style="text-decoration:none;">Discord</a></pre>
 </div>
 	</div>		    		
 		<video autoplay loop id="vid">
-		    <source src="assets/media/vid.mp4" type="video/mp4">
+		    <source src="assets/media/thrax.mp4" type="video/mp4">
 		</video>
 		<script src="assets/js/script.js"></script>
 		<script src="assets/js/event.js"></script>
