--- a/index.html
+++ b/index.html
@@ -32,27 +32,33 @@
 			<div id="borderRight" style="right: 0; top: 0;"></div>
 			<div id="borderBottom" style="bottom: 0; right: 0;"></div>
 			<div id="borderLeft" style="left: 0; bottom: 0;"></div>
-		</div>
-		
-		<div id="main">
-			<div class="center">
-				
-  
-██╗░░██╗███████╗██╗░░██╗██╗░░██╗███╗░░░███╗░█████╗░██████╗░
+		        </div>
+        <div id="border">
+            <div id="borderTop" style="top: 0; left: 0;"></div>
+            <div id="borderRight" style="right: 0; top: 0;"></div>
+            <div id="borderBottom" style="bottom: 0; right: 0;"></div>
+            <div id="borderLeft" style="left: 0; bottom: 0;"></div>
+        </div>
+
+        <div id="main">
+            <div class="center">
+                <pre>
+░░██╗███████╗██╗░░██╗██╗░░██╗███╗░░░███╗░█████╗░██████╗░
 ██║░░██║██╔════╝╚██╗██╔╝╚██╗██╔╝████╗░████║██╔══██╗██╔══██╗
 ███████║█████╗░░░╚███╔╝░░╚███╔╝░██╔████╔██║██║░░██║██████╦╝
 ██╔══██║██╔══╝░░░██╔██╗░░██╔██╗░██║╚██╔╝██║██║░░██║██╔══██╗
 ██║░░██║███████╗██╔╝╚██╗██╔╝╚██╗██║░╚═╝░██║╚█████╔╝██████╦╝
 ╚═╝░░╚═╝╚══════╝╚═╝░░╚═╝╚═╝░░╚═╝╚═╝░░░░░╚═╝░╚════╝░╚═════╝░
-				
+
+
                      <a href="https://axti.ink/" target="_blank" style="text-decoration: none;">scorch#1000</a> | <a href="https://discord.gg/Fj4BySxjne" target="_blank" style="text-decoration:none;">Discord</a></pre>
 </div>
-	</div>		    		
-		<video autoplay loop id="vid">
-		    <source src="assets/media/thrax.mp4" type="video/mp4">
-		</video>
-		<script src="assets/js/script.js"></script>
-		<script src="assets/js/event.js"></script>
-	</body>
+    </div>
+        <video autoplay loop id="vid">
+            <source src="assets/media/thrax.mp4" type="video/mp4">
+        </video>
+        <script src="assets/js/script.js"></script>
+        <script src="assets/js/event.js"></script>
+    </body>
 
 </html>
