--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
             <div class="center">
                 <pre>
 
-██╗░░██╗███████╗██╗░░██╗██╗░░██╗███╗░░░███╗░█████╗░██████╗░
-██║░░██║██╔════╝╚██╗██╔╝╚██╗██╔╝████╗░████║██╔══██╗██╔══██╗
-███████║█████╗░░░╚███╔╝░░╚███╔╝░██╔████╔██║██║░░██║██████╦╝
-██╔══██║██╔══╝░░░██╔██╗░░██╔██╗░██║╚██╔╝██║██║░░██║██╔══██╗
-██║░░██║███████╗██╔╝╚██╗██╔╝╚██╗██║░╚═╝░██║╚█████╔╝██████╦╝
-╚═╝░░╚═╝╚══════╝╚═╝░░╚═╝╚═╝░░╚═╝╚═╝░░░░░╚═╝░╚════╝░╚═════╝░
+░█████╗░██╗░░██╗████████╗██╗
+██╔══██╗╚██╗██╔╝╚══██╔══╝██║
+███████║░╚███╔╝░░░░██║░░░██║
+██╔══██║░██╔██╗░░░░██║░░░██║
+██║░░██║██╔╝╚██╗░░░██║░░░██║
+╚═╝░░╚═╝╚═╝░░╚═╝░░░╚═╝░░░╚═╝
 
 
-                     <a href="https://axti.ink/" target="_blank" style="text-decoration: none;">ScorchJustice#0001 Is My Current Tag</a> | <a href="https://discord.gg/Fj4BySxjne" target="_blank" style="text-decoration:none;">Server</a></pre>
+                     <a href="https://axti.ink/" target="_blank" style="text-decoration: none;">fusion#1000</a> | <a href="https://discord.gg/Fj4BySxjne" target="_blank" style="text-decoration:none;">Server</a></pre>
 </div>
     </div>
         <video autoplay loop id="vid">
