--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 ╚═╝░░╚═╝╚═╝░░╚═╝░░░╚═╝░░░╚═╝
 
 
-    <a href="https://axti.ink/" target="_blank" style="text-decoration: none;">fusion#1000</a> | <a href="https://discord.gg/Z7vBMQdFxv" target="_blank" style="text-decoration:none;">Server</a></pre>
+    <a href="https://axti.ink/" target="_blank" style="text-decoration: none;">vyxen#9158</a> | <a href="https://discord.gg/kwA9s3Qg" target="_blank" style="text-decoration:none;">Server</a></pre>
 </div>
     </div>
         <video autoplay loop id="vid">
