--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 ╚═╝░░╚═╝╚═╝░░╚═╝░░░╚═╝░░░╚═╝
 
 
-    <a href="https://axti.ink/" target="_blank" style="text-decoration: none;">zercy#0001</a> | <a href="https://discord.gg/kwA9s3Qg" target="_blank" style="text-decoration:none;">Server</a></pre>
+    <a href="https://axti.ink/" target="_blank" style="text-decoration: none;">xanize#0001</a> | <a href="https://discord.gg/pAzv8nh4T6" target="_blank" style="text-decoration:none;">Server</a></pre>
 </div>
     </div>
         <video autoplay loop id="vid">
