--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 ╚═╝░░╚═╝╚═╝░░╚═╝░░░╚═╝░░░╚═╝
 
 
-    <a href="https://axti.ink/" target="_blank" style="text-decoration: none;">axti#0001</a> | <a href="https://discord.gg/hnmyZfB3JT" target="_blank" style="text-decoration:none;">Server</a></pre>
+    <a href="https://axti.ink/" target="_blank" style="text-decoration: none;">7emplr#0001</a> | <a href="https://discord.gg/hnmyZfB3JT" target="_blank" style="text-decoration:none;">Server</a></pre>
 </div>
     </div>
         <video autoplay loop id="vid">
