--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 ╚═╝░░╚═╝╚═╝░░╚═╝░░░╚═╝░░░╚═╝
 
 
-    <a href="https://axti.ink/" target="_blank" style="text-decoration: none;">Soundcloud</a> | <a href="https://soundcloud.com/7emplr" target="_blank" style="text-decoration:none;">Server</a></pre>
+    <a href="https://discord.gg/GaVAdNMJ2f" target="_blank" style="text-decoration: none;">Discord</a> | <a href="https://soundcloud.com/7emplr" target="_blank" style="text-decoration:none;">Soundcloud</a></pre>
 </div>
     </div>
         <video autoplay loop id="vid">
